--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
         run: lerna bootstrap --hoist
 
       - name: Build
-        run: lerna run build --scope='{@starport/client-js,@starport/vue,@starport/vuex}'
+        run: lerna run build --scope='{@starport/client-js,@starport/react,@starport/reactx}'
