--- a/.github/workflows/minor-release.yml
+++ b/.github/workflows/minor-release.yml
@@ -23,7 +23,7 @@ jobs:
         run: lerna bootstrap --hoist
 
       - name: Build
-        run: lerna run build --scope='{@starport/client-js,@starport/vue,@starport/vuex}'
+        run: lerna run build --scope='{@starport/client-js,@starport/react,@starport/reactx}'
 
       - name: Configure git
         run: git config --global user.email "hello@tendermint.com" &&  git config --global user.name "Lerna CI"
