--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
         run: lerna bootstrap --hoist
 
       - name: Build
-        run: lerna run build --scope='{@starport/client-js,@starport/vue,@starport/vuex}'
+        run: lerna run build --scope='{@starport/client-js,@starport/react,@starport/reactx}'
 
       - name: Publish
         run: lerna publish --canary --preid beta --dist-tag next --yes --no-verify-access
